--- a/BugTracker/bin/BugTracker.dll.config
+++ b/BugTracker/bin/BugTracker.dll.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BugTracker-20181003091159.mdf;Initial Catalog=aspnet-BugTracker-20181003091159;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
+  <appSettings file="private.config">
+    <add key="smtpserver" value="smtp.gmail.com" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
